# sharp

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package.json
.claude/skills/release/: SKILL.md
.cursor/hooks/state/: .gitignore  continual-learning.json
.github/workflows/: release.yml  server-ci.yml  web-ci.yml
deploy/: .env.example  Caddyfile  DB_STUDIO.md  DOKPLOY.md  Dockerfile  Dockerfile.landing  Dockerfile.maintenance  Dockerfile.server  Dockerfile.web  README.md  docker-compose.dev.yml  docker-compose.dokploy.yml  docker-compose.local.yml  docker-compose.yml  maintenance.html  nginx.maintenance.conf  nginx.web.conf
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  DESIGN_SYSTEM.md  LEFTOVERS.md  PLAN_PHASE7_TASKS.md  RELEASE.md
landing/: README.md  astro.config.mjs  package-lock.json  package.json
landing/mock/: thumbnail.html
landing/src/pages/: index.astro
landing/src/styles/: global.css
mobile/: app.json  metro.config.js  package.json
mobile/app/: _layout.tsx  login.tsx
mobile/app/(tabs)/: _layout.tsx  activity.tsx  index.tsx  search.tsx  settings.tsx
mobile/app/channel/: [id].tsx
mobile/app/thread/: [id].tsx
mobile/src/: store.ts
mobile/src/components/: Attachment.tsx  Avatar.tsx  ChatLayoutChooser.tsx  Composer.tsx  DayDivider.tsx  Markdown.tsx  MessageItem.tsx
mobile/src/lib/: api.ts  push.ts  session.ts  types.ts  util.ts  ws.ts
mobile/src/shims/: punycode.js
scripts/: build-native.sh  dev.sh  release.sh  stop.sh
server/: .env.example  Cargo.toml  README.md
server/migrations/: 0001_init.sql  0002_docs.sql  0003_docs_hardening.sql  0003_files.sql  0004_notifications.sql  0006_doc_kind.sql  0007_profile.sql  0008_reply_to.sql  0009_expo_push.sql  0010_voice_link.sql  0011_meeting_notes.sql  0012_channel_roles.sql  0013_doc_inherit.sql  0014_standalone_calls.sql  0015_voice_triggers.sql  0016_calendar.sql  0017_polls.sql  0018_e2ee.sql  0019_passkeys.sql  0020_doc_images.sql  0021_board_kind.sql  0022_sharpy.sql  0023_tasks.sql  0024_task_embeddings.sql  0025_user_nicknames.sql  0026_notification_prefs.sql  0027_apns.sql  0028_password_reset.sql
server/src/: ai.rs  apns.rs  auth.rs  calendar_crypto.rs  calendar_sync.rs  config.rs  deepseek.rs  desktop_auth.html  docs_sync.rs  error.rs  expo_push.rs  gif.rs  google_oauth.rs  livekit.rs  mailer.rs  main.rs  models.rs  notify.rs  passkey_settings.html  passkeys.rs  state.rs  storage.rs  vapid.rs
server/src/routes/: calendar.rs  call_links.rs  channels.rs  docs.rs  e2ee.rs  files.rs  gifs.rs  github.rs  meetings.rs  messages.rs  mod.rs  notifications.rs  polls.rs  search.rs  sharpy.rs  tasks.rs  users.rs  voice.rs  voice_triggers.rs
server/src/ws/: mod.rs  session.rs  voice.rs
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/src/: App.tsx  index.css  main.tsx  store.ts  vite-env.d.ts
web/src/components/: ActivePollBanner.tsx  AppShell.tsx  Attachments.tsx  AudioMessage.tsx  Avatar.tsx  AvatarCropper.tsx  BrandLockup.tsx  BrowseChannelsModal.tsx  CallPollOverlay.tsx  ChannelPaneHeader.tsx  ChannelSettingsModal.tsx  ChannelTabs.tsx  ChatLayoutChooser.tsx  CompactSidebar.tsx  Composer.tsx  CreateChannelModal.tsx  CreatePollModal.tsx  DayDivider.tsx  DesktopAuth.tsx  DuckStreakBar.tsx  DuckSuggest.tsx  GifPicker.tsx  GuestCall.tsx  Home.tsx  ImageLightbox.tsx  Login.tsx  Markdown.tsx  MessageItem.tsx  MessagePane.tsx  MobileTabBar.tsx  Modal.tsx  NavigationPicker.tsx  NotificationCenter.tsx  NotificationSetup.tsx  Onboarding.tsx  PasskeySetupPrompt.tsx  PollCard.tsx  PollView.tsx  QuickSwitcher.tsx  ResetPassword.tsx  (+15 more)
web/src/components/auth/: AuthField.tsx  BadgeCard.tsx  SharpnessMeter.tsx
web/src/components/board/: BoardCard.tsx  BoardColumn.tsx  BoardEditor.tsx  BoardEditorInner.tsx  BoardHome.tsx  BoardSidebar.tsx  CardPanel.tsx  ChannelBoards.tsx  CustomizePanel.tsx  PropertyControls.tsx  SelectOptionEditor.tsx  useBoardDnd.ts
web/src/components/calendar/: AgendaList.tsx  CalendarSidebar.tsx  CalendarView.tsx  EventDetail.tsx  EventPill.tsx  MeetingCard.tsx  MiniMonth.tsx  ScheduleMeetingModal.tsx  WeekGrid.tsx
web/src/components/canvas/: CanvasEditor.tsx  CanvasEditorInner.tsx  CanvasHome.tsx  CanvasSidebar.tsx  ChannelCanvases.tsx
web/src/components/docs/: BoardEmbed.tsx  ChannelDocs.tsx  DocEditor.tsx  DocEditorInner.tsx  DocRolesModal.tsx  DocsHome.tsx  DocsSidebar.tsx  EmojiPicker.tsx  ShareToChannelModal.tsx  schema.tsx
web/src/components/help/: HelpArea.tsx
web/src/components/hub/: DocKindHub.tsx  HubCard.tsx  HubFilters.tsx  HubGrid.tsx  HubPage.tsx
web/src/components/meetings/: MeetingDetailView.tsx  MeetingsHome.tsx  MeetingsSidebar.tsx  NewMeetDialog.tsx
web/src/components/sharpy/: SharpyCitationChips.tsx  (+1 more)
web/src/content/: faq.md
web/src/lib/: annotations.ts  api.ts  apns.ts  audioRecording.ts  boardColors.ts  boardDoc.ts  calendar.ts  changelog.ts  desktopAuth.ts  displayName.ts  docSync.ts  duckStreak.ts  emoji.ts  fracIndex.ts  gif.ts  help.ts  iosViewport.ts  meetingEffects.ts  meetingLabels.ts  nav.ts  notify.ts  onboarding.ts  passkeys.ts  pip.ts  sound.ts  speech.ts  theme.ts  tldrawYjs.ts  toast.ts  types.ts  useMediaQuery.ts  util.ts  videoBackgrounds.ts  videoEffects.ts  voice.ts  voicePrefs.ts  whatsNew.ts  ws.ts
web/src/types/: document-pip.d.ts
web/src/ui/: Badge.tsx  Banner.tsx  Button.tsx  Card.tsx  ChoiceCard.tsx  DesignGallery.tsx  Divider.tsx  EmptyState.tsx  Field.tsx  Heading.tsx  IconButton.tsx  Input.tsx  Kbd.tsx  ListRow.tsx  Menu.tsx  Modal.tsx  ModalFooter.tsx  Overlay.tsx  PanelHeader.tsx  Popover.tsx  SearchInput.tsx  SectionLabel.tsx  Select.tsx  Skeleton.tsx  SlideOver.tsx  Spinner.tsx  Tabs.tsx  Tag.tsx  Textarea.tsx  Tooltip.tsx  cn.ts  icons.tsx  index.ts  useDismiss.ts
(+45 files in other folders)
