[package]
name = "sharp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sharp-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
jsonwebtoken = "9"
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
futures-util = "0.3"
# File uploads: S3-compatible object storage (AWS S3, MinIO, R2, Backblaze, …)
object_store = { version = "0.11", features = ["aws"] }
bytes = "1"
mime_guess = "2"
# Web push (RFC 8291) + VAPID key generation
web-push = { version = "0.10", default-features = false, features = ["hyper-client"] }
p256 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8"] }
rand = "0.8"
base64 = "0.22"
