[package]
name = "sharp-desktop"
version = "0.1.0"
description = "sharp desktop shell"
authors = ["sharp"]
edition = "2021"
rust-version = "1.77"

# The library is what Tauri's mobile/desktop entrypoints link against.
[lib]
name = "sharp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds where `devUrl` is not used.
custom-protocol = ["tauri/custom-protocol"]
