[package]
name = "sharp-desktop"
version = "0.3.0"
description = "sharp desktop shell"
authors = ["sharp"]
edition = "2021"
rust-version = "1.77"

# The library is what Tauri's mobile/desktop entrypoints link against.
[lib]
name = "sharp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Superset of the official tauri-plugin-notification: same local-notification API
# plus macOS/iOS APNs remote push (feature-gated). The two cannot coexist (both
# claim the UNUserNotificationCenter delegate), so this replaces the official one.
# Pinned to the current release (JS side pinned to the same version).
tauri-plugin-notifications = { version = "=0.5.0-rc.11", features = ["push-notifications"] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# single-instance forwards deep-link URLs to the running app (Windows/Linux).
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[features]
# This feature is used for production builds where `devUrl` is not used.
custom-protocol = ["tauri/custom-protocol"]
